--- a/src/components/Burger/BurgerIngredient/BurgerIngredient.module.css
+++ b/src/components/Burger/BurgerIngredient/BurgerIngredient.module.css
@@ -1,10 +1,10 @@
 .BreadBottom {
-    height: 15%;
+    height: 16%;
     width: 80%;
     background: linear-gradient(#f08e4a, #e27b36);
     border-radius: 0 0 30px 30px;
-    box-shadow: inset -15px 0 #c15711;
-    margin: 2% auto;
+    box-shadow: inset -15px 0px 15px #c15711;
+    margin: 1% auto;
 }
 
 .BreadTop {
@@ -12,8 +12,8 @@
     width: 80%;
     background: linear-gradient(#bc581e, #e27b36);
     border-radius: 50% 50% 0 0;
-    box-shadow: inset -15px 0 #c15711;
-    margin: 2% auto;
+    box-shadow: inset -15px 0 10px #c15711;
+    margin: 1% auto;
     position: relative;
 }
 
@@ -82,24 +82,24 @@
 
 .Meat {
     width: 80%;
-    height: 8%;
+    height: 7%;
     background: linear-gradient(#7f3608, #702e05);
-    margin: 2% auto;
+    margin: 1% auto;
     border-radius: 15px;
 }
 
 .Cheese {
     width: 90%;
-    height: 4.5%;
-    margin: 2% auto;
+    height: 4%;
+    margin: 1% auto;
     background: linear-gradient(#f4d004, #d6bb22);
     border-radius: 20px;
 }
 
 .Salad {
     width: 85%;
-    height: 7%;
-    margin: 2% auto;
+    height: 6%;
+    margin: 1% auto;
     background: linear-gradient(#228c1d, #91ce50);
     border-radius: 20px;
 }
@@ -108,5 +108,5 @@
     width: 80%;
     height: 3%;
     background: linear-gradient(#bf3813, #c45e38);
-    margin: 2% auto;
+    margin: 1% auto;
 }
